<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
     >
	<ImageView
	    android:layout_width="match_parent"
        android:layout_height="match_parent"
	     android:src="@drawable/bg2_portrait"
	     android:scaleType="fitXY"
	     android:contentDescription="@null"
	    />
    <LinearLayout 
            android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_margin="15dp"
        >
        <ImageView             
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:src="@drawable/terraexplorer_logo"
		    android:adjustViewBounds="true"
		     android:scaleType="fitCenter"
		     android:contentDescription="@null"
		     android:layout_marginLeft="15dp"
		     android:layout_marginTop="15dp"
		     android:layout_marginRight="15dp"
            />
        
    <TextView
        android:id="@+id/about_version" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_version"
        android:textColor="@color/text_color"
        android:textSize="@dimen/font_size_large"
        android:gravity="center" 
        />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/about_patents"
        android:textColor="@color/text_color"
        android:textSize="@dimen/font_size_normal"
        android:gravity="left" 
        />
    <TextView
        android:id="@+id/about_info_email" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/about_info_email"
        android:textColor="@color/text_color"
        android:textSize="@dimen/font_size_normal"
        android:gravity="left" 
        />

    <TextView
        android:id="@+id/about_support_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:text="@string/about_support_email"
        android:textColor="@color/text_color"
        android:textSize="@dimen/font_size_normal" />
    
    <Button
        android:id="@+id/about_close"
        android:layout_marginTop="10dp"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:background="@drawable/control_with_border"
        android:textColor="@color/text_color"
        android:text="@string/about_close" 
        />

    </LinearLayout>
</RelativeLayout>
