<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorite_name"
            android:textSize="@dimen/font_size_normal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/favorite_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorite_name"
            android:textSize="@dimen/font_size_normal" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_show_on_3d"
            android:textSize="@dimen/font_size_normal"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/favorite_show_on_3d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:checked="false"
            android:textOff="@string/no"
            android:textOn="@string/yes" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite_icon_name"
                android:textSize="@dimen/font_size_normal"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/favorite_icon_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite_name"
                android:textSize="@dimen/font_size_normal" />
        </LinearLayout>

        <ImageView
            android:id="@+id/favorite_icon_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:contentDescription="@null"
            android:src="@drawable/star_red" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorite_description"
            android:textSize="@dimen/font_size_normal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/favorite_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorite_description"
            android:textSize="@dimen/font_size_normal" />
    </LinearLayout>

</LinearLayout>